2021-03-03  Jay Berkenbilt  <ejb@ql.org>

	* Add QPDFObjectHandle::makeResourcesIndirect

2021-03-02  Jay Berkenbilt  <ejb@ql.org>

	* Add an optional resource_names argument to getUniqueResourceName
	for added efficiency.

	* Add conflict detection QPDFObjectHandle::mergeResources.

2021-03-01  Jay Berkenbilt  <ejb@ql.org>

	* Improve code that finds unreferenced resources to ignore names
	in the content stream that are not fonts or XObjects. This should
	reduce the number of cases when qpdf needlessly decides not to
	remove unreferenced resources. Hopefully it doesn't create any new
	bugs where it removes unreferenced resources that it isn't
	supposed to.

	* QPDFObjectHandle::ParserCallbacks: add virtual handleWarning
	method, and provide default (empty) implementation of it and
	handleEOF().

	* Add QPDF::numWarnings() -- useful to tell whether any warnings
	were issued by a specific bit of code.

2021-02-26  Jay Berkenbilt  <ejb@ql.org>

	* Bug fix: QPDFFormFieldObjectHelper was mis-handling /DA, /Q, and
	/DR in ways that usually didn't matter but were still wrong. /DA
	and /Q were being found in the field hierarchy, but if not found,
	the default values in the /AcroForm dictionary were not being
	used. /DR was being treated as an inherited field in the field
	dictionary, which is wrong. It is actually supposed to come from
	the /AcroForm dictionary. We were getting away with this since
	many popular form writers seem to copy it to the field as well,
	even though the spec makes no mention of doing this. To support
	this, QPDFFormFieldObjectHelper::getDefaultResources was added.

2021-02-25  Jay Berkenbilt  <ejb@ql.org>

	* Update StreamDataProvider examples to use copyStream() when they
	want to get to the original stream data from the provider. Prior
	to 10.2.0, we had to copy the stream to another QPDF, but now we
	can just use copyStream().

	* Bug fix/behavior change: when QPDF::replaceObject or